--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "resume-site (mern stack)",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=prodaction node app.js",
+    "start": "cross-env NODE_ENV=production node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
     "client:install": "npm install --prefix client",
